--- a/Aula3/pg/desafiocorrigido.html
+++ b/Aula3/pg/desafiocorrigido.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    
+    <nav id="desafiocorrigido">
+        <img src="../img/Gato.jpg" alt="logo">
+        <ul>
+            <li><a href="../index.html" target="_blank">Home</a></li>
+            <li><a href="../pg/contato.html" target="_blank">Contato</a></li>
+            <li><a href="../pg/galeria.html" target="_blank">Galeria</a></li>
+        </ul>
+    </nav>
+
+    
     <div id="ex5">
         <div id="htmlex5"><h3>HTML</h3></div>
         <div id="cssex5"><h3>CSS</h3></div>
